--- a/src/sass/sections/_hero.scss
+++ b/src/sass/sections/_hero.scss
@@ -3,7 +3,23 @@
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 
     &__img {
-        @include transitionOpacity;
+        &:before {
+            background-size: cover;
+            background-position: center;
+            position: absolute;
+            content: "";
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+            z-index: 1;
+            transition: opacity 0.5s linear;
+            opacity: 0;
+        }
+        &:hover::before{
+            opacity: 1;
+        }
+        
         background-size: cover;
         background-position: center;
         display: grid;
@@ -44,6 +60,7 @@
         text-orientation: mixed;
         padding-right: 8px;
         pointer-events: none;
+        z-index: 2;
     }
 }
 
@@ -52,9 +69,4 @@
     position: absolute;
     width: 100vw;
     top: 10vh;
-    font-size: 4rem;
-
-    span {
-        font-size: 4rem;
-    }
 }
